--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "sensorium-web",
-  "version": "0.1.0",
-  "private": true,
+  "name": "Sensorium",
+  "homepage": " sensorium.online",
+  "version": "1.0.1",
   "dependencies": {
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
-    "react-scripts": "1.1.2",
-    "redux": "^3.7.2"
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.13"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.0.0"
   }
 }
