Registration form added
using reactstrap and react-bootstrap both because reactstrap's modal was not working or i didn't know how to use that :-P lol

--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
-  "name": "sensorium-web",
+  "name": "react-sensorium",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
-    "react-scripts": "1.1.2",
-    "redux": "^3.7.2"
+    "bootstrap": "^4.0.0-alpha.6",
+    "jquery": "^3.3.1",
+    "mdbreact": "^4.3.0",
+    "react": "^16.3.2",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-addons-transition-group": "^15.6.2",
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^16.3.2",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.1",
+    "react-transition-group": "^1.2.1",
+    "reactstrap": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
