--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-addons-transition-group": "^15.6.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
+    "react-fontawesome": "^1.6.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-transition-group": "^1.2.1",
