Added firebase integration, corrected warnings and errors on className, fixed js scripts con index.html to avoid block-rendering problems

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
+    "firebase": "^5.0.4",
     "jquery": "^3.3.1",
     "react": "^16.3.2",
     "react-addons-css-transition-group": "^15.6.2",
