--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "bootstrap": "^4.0.0-alpha.6",
     "firebase": "^5.0.4",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-addons-css-transition-group": "^15.6.2",
     "react-addons-transition-group": "^15.6.2",
     "react-bootstrap": "^0.32.1",
+    "react-datepicker": "^1.5.0",
     "react-dom": "^16.3.2",
     "react-fontawesome": "^1.6.1",
     "react-router-dom": "^4.2.2",
