--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-datepicker": "^1.5.0",
     "react-dom": "^16.3.2",
     "react-fontawesome": "^1.6.1",
+    "react-ga": "^2.5.3",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-transition-group": "^1.2.1",
