--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.3.2",
     "react-fontawesome": "^1.6.1",
     "react-ga": "^2.5.3",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-transition-group": "^1.2.1",
