--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-addons-transition-group": "^15.6.2",
     "react-bootstrap": "^0.32.1",
-    "react-datepicker": "^1.5.0",
     "react-dom": "^16.3.2",
     "react-fontawesome": "^1.6.1",
     "react-ga": "^2.5.3",
     "react-infinite-calendar": "^2.3.1",
+    "react-media": "^1.8.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
