--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-ga": "^2.5.3",
     "react-infinite-calendar": "^2.3.1",
     "react-media": "^1.8.0",
+    "react-particles-js": "^2.2.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
