--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-addons-transition-group": "^15.6.2",
     "react-bootstrap": "^0.32.1",
+    "react-chat-elements": "^10.0.1",
     "react-chat-ui": "^0.3.2",
     "react-dom": "^16.3.2",
     "react-fontawesome": "^1.6.1",
