--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-particles-js": "^2.2.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1",
+    "react-scripts": "^1.1.4",
     "react-transition-group": "^1.2.1",
     "reactstrap": "^5.0.0"
   },
