--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-fontawesome": "^1.6.1",
     "react-ga": "^2.5.3",
     "react-infinite-calendar": "meta-meta/react-infinite-calendar#built",
+    "react-loadable": "^5.5.0",
     "react-media": "^1.8.0",
     "react-particles-js": "^2.2.0",
     "react-reveal": "^1.2.2",
