--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^0.32.1",
     "react-burger-menu": "^2.5.2",
     "react-dom": "^16.3.2",
+    "react-dropzone": "^6.0.2",
     "react-fontawesome": "^1.6.1",
     "react-ga": "^2.5.3",
     "react-infinite-calendar": "meta-meta/react-infinite-calendar#built",
