--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.2",
+    "randomcolor": "^0.5.3",
     "react": "^16.3.2",
     "react-addons-css-transition-group": "^15.6.2",
     "react-addons-transition-group": "^15.6.2",
