--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-infinite-calendar": "meta-meta/react-infinite-calendar#built",
     "react-loadable": "^5.5.0",
     "react-media": "^1.8.0",
+    "react-modal": "^3.6.1",
     "react-particles-js": "^2.2.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^4.2.2",
