--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@livechat/ui-kit": "^0.1.0",
     "bootstrap": "^4.0.0-alpha.6",
     "firebase": "^5.5.6",
+    "immutability-helper": "^2.8.1",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "node-sass-chokidar": "^1.3.3",
